MIT-677: fix spacing issues

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -96,6 +96,7 @@
 
 .leaderboardRow {
   flex: 1 0 100%;
+  min-height: rem(150);
   width: 100%;
 
   :global(.adUnit) {
